samples/_failures_safe/1761520527_06b355_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb7640d5.c: In function ‘main’:
./samples/SAFE/__tmp_eb7640d5.c:151:17: error: expected declaration or statement at end of input
  151 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_eb7640d5.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb7640d5.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb7640d5.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb7640d5.c:151:17: error: expected declaration or statement at end of input
